package entite.personnages.races;

import statistiques.Stats;

public interface Races {

    public Stats stat();
}
