package equipement.arme.courante;

public class Baton extends ArmeCourante {
    public Baton() {
        super("Bâton", 1, 6);
    }
}
