package equipement.arme.distance;

public class ArcCourt extends ArmeDistance {
    public ArcCourt() {
        super("Arc court", 1, 6, 16);
    }
}
