package equipement.arme.distance;

public class Fronde extends ArmeDistance {
    public Fronde() {
        super("Fronde", 1, 4, 6);
    }
}
