package equipement.arme.guerre;

public class EpeeLongue extends ArmeGuerre {
    public EpeeLongue() {
        super("Epée longue", 1, 8);
    }
}
