package equipement.arme.guerre;

public class Rapiere extends ArmeGuerre {
    public Rapiere() {
        super("Rapière", 1, 8);
    }
}
