package equipement.armure;

public class Armure_ecaille extends Armure_legere {
    public Armure_ecaille(int armor_class) {
        super(armor_class, "Armure d'écaille");
    }
}
