package equipement.armure;

public class Cotte_maille extends Armure_lourde {
    public Cotte_maille() {
        super(11, "Catte de mailles");
    }
}
