package equipement.armure;

public class Demi_plate extends Armure_legere {
    public Demi_plate() {
        super(10, "Demi-plate");
    }
}
