package equipement.armure;

public class Harnois extends Armure_lourde {
    public Harnois() {
        super(12, "Harnois");
    }
}
