package personnages.classes;

public interface Classe {

    public int pv();

}
