package personnages.classes;

public class Guerrier implements Classe {

    private static int _pv = 20;

    public int pv()
    {
        return _pv;
    }

}
