package personnages.classes;

public class Magicien implements Classe {

    private static int _pv = 12;

    public int pv()
    {
        return _pv;
    }

}
