package personnages.classes;

public class Roublard implements Classe {

    private static int _pv = 16;

    public int pv()
    {
        return _pv;
    }

}
